<resources>
    <string name="app_name">Converter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Converter</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="chose_scale">Chose scale</string>
    <string name="chose_final_scale">Chose final scale</string>
    <string name="enter_the_temperature">Enter the temperature</string>
    <string name="convert">convert</string>
    <string name="result">result</string>
</resources>